<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="com.hengweather.android.ui.OpenSourceComponentActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/intro_meowweather"
                android:textSize="16sp"
                android:textColor="#B3B3B3"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/xty"
                android:textSize="20sp"
                android:textColor="#848484"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/xty_intro"
                android:textSize="13sp"
                android:textColor="#848484"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/litepal"
                android:textSize="20sp"
                android:textColor="#848484"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/litepal_license"
                android:textSize="13sp"
                android:textColor="#848484"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/okhttp"
                android:textSize="20sp"
                android:textColor="#848484"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/okhttp_license"
                android:textSize="13sp"
                android:textColor="#848484"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/glide"
                android:textSize="20sp"
                android:textColor="#848484"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/glide_license"
                android:textSize="13sp"
                android:textColor="#848484"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/citypicker"
                android:textSize="20sp"
                android:textColor="#848484"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/citypicker_license"
                android:textSize="13sp"
                android:textColor="#848484"
                android:padding="10dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

